# plugin_dev

./: Dependencies.txt  README.md
JUCE_Plugin_Helper_Scripts/: README.md  windows_build_from_wsl.ps1
JUCE_Plugin_Template/: CMakeLists.txt  README.md  TESTING_UI.md  build.sh  clean.ps1  clean.sh  setup_scripts.sh
JUCE_Plugin_Template/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
ThreeBandEQ/: CMakeLists.txt
ThreeBandEQ/Source/: PluginProcessor.cpp  PluginProcessor.h
VolumeControlPlugin/: CMakeLists.txt  README.md  README_BUILD.md  VSCode_README.md  WINDOWS_BUILD.md  WINDOWS_BUILD_OPTIONS.md  WSL_TO_WINDOWS_BUILD.md  Windows-MSVC-WSL.cmake  build.sh  build_plugin.ps1  build_release.sh  build_simple.ps1  build_windows.sh  build_windows_alt.sh  build_windows_msvc.sh  clean.ps1  clean.sh  clean_and_rebuild.sh  cleanup_crosscompile.sh  mingw-w64-toolchain.cmake  msvc-toolchain.cmake  set_msvc_paths.sh  setup_scripts.sh  windows_build_from_wsl.ps1
VolumeControlPlugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Wobbler/: Concept + User Requirements.md  Concept.md  Project Plan.md  Technical Requirements.md
